[gd_scene load_steps=23 format=2]

[ext_resource path="res://src/components/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://src/components/Player/PlayerStateMachine.gd" type="Script" id=2]
[ext_resource path="res://src/components/Player/PlayerStats.gd" type="Script" id=3]
[ext_resource path="res://src/assets/img/Player/Edvard_animation_sheet_body.png" type="Texture" id=4]
[ext_resource path="res://src/assets/img/Player/Edvard_animation_sheet_hands.png" type="Texture" id=5]
[ext_resource path="res://src/assets/img/Player/Edvard_animation_sheet_1h_sword.png" type="Texture" id=6]
[ext_resource path="res://src/components/Player/Helpers/HUD.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/components/Player/Helpers/Camera.tscn" type="PackedScene" id=8]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 224, 299 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 224, 299 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 224, 299 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 6, 11 )

[sub_resource type="Animation" id=5]
resource_name = "attack_1"
length = 0.7
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.45, 0.5, 0.55, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 17, 18, 19, 20, 21, 22, 23, 24, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Weapons/1h_sword_straight:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.45, 0.5, 0.55, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 17, 18, 19, 20, 21, 22, 23, 24, 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Bare_hands:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.45, 0.5, 0.55, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 17, 18, 19, 20, 21, 22, 23, 24, 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "attack_2"
length = 0.7
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.45, 0.5, 0.55, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35, 36, 37, 38, 39, 40 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Weapons/1h_sword_straight:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.45, 0.5, 0.55, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35, 36, 37, 38, 39, 31 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Bare_hands:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.45, 0.5, 0.55, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35, 36, 37, 38, 39, 31 ]
}

[sub_resource type="Animation" id=7]
resource_name = "attack_3"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.35, 0.4, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 25, 26, 27, 28, 29, 30, 31 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Weapons/1h_sword_straight:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.35, 0.4, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 25, 26, 27, 28, 29, 30, 31 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Bare_hands:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.35, 0.4, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 25, 26, 27, 28, 29, 30, 31 ]
}

[sub_resource type="Animation" id=8]
length = 0.6
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 15, 16 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Bare_hands:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 15, 16 ]
}

[sub_resource type="Animation" id=9]
resource_name = "death"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 42, 43, 44, 45, 46, 47, 48 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Bare_hands:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 42, 43, 44, 45, 46, 47, 48 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("PlayerStats")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "show_deathscreen"
} ]
}

[sub_resource type="Animation" id=10]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Bare_hands:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Weapons/1h_sword_straight:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}

[sub_resource type="Animation" id=11]
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Bare_hands:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Weapons/1h_sword_straight:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=12]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 11 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Bare_hands:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 11 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Weapons/1h_sword_straight:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 11 ]
}

[sub_resource type="Animation" id=13]
length = 0.4
loop = true
step = 0.04
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04, 0.08, 0.12, 0.16, 0.2, 0.24, 0.28, 0.32, 0.36 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Bare_hands:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.04, 0.08, 0.12, 0.16, 0.2, 0.24, 0.28, 0.32, 0.36 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Weapons/1h_sword_straight:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.04, 0.08, 0.12, 0.16, 0.2, 0.24, 0.28, 0.32, 0.36 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ]
}

[sub_resource type="Animation" id=14]
resource_name = "take_damage"
length = 0.16
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 49, 50, 51 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Bare_hands:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 49, 50, 51 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlayerStats:damage_received")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.15 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 1.00508, 1.00473 )
collision_mask = 15
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="PlayerStateMachine" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="PlayerStats" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="Body" type="Sprite" parent="." groups=[
"turnable",
]]
texture = SubResource( 1 )
vframes = 13
hframes = 4
frame = 48

[node name="Bare_hands" type="Sprite" parent="." groups=[
"turnable",
]]
texture = SubResource( 2 )
vframes = 13
hframes = 4
frame = 48

[node name="Weapons" type="Node2D" parent="." groups=[
"turnable",
]]

[node name="1h_sword_straight" type="Sprite" parent="Weapons"]
texture = SubResource( 3 )
vframes = 13
hframes = 4
frame = 29

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack_1 = SubResource( 5 )
anims/attack_2 = SubResource( 6 )
anims/attack_3 = SubResource( 7 )
anims/climb = SubResource( 8 )
anims/death = SubResource( 9 )
anims/fall = SubResource( 10 )
anims/idle = SubResource( 11 )
anims/jump = SubResource( 12 )
anims/run = SubResource( 13 )
anims/take_damage = SubResource( 14 )

[node name="HUD" parent="." instance=ExtResource( 7 )]

[node name="Camera" parent="." instance=ExtResource( 8 )]
position = Vector2( 0, -30 )
zoom = Vector2( 0.5, 0.5 )
editor_draw_screen = false

[node name="ActionChecker" type="RayCast2D" parent="."]
position = Vector2( -5.96967, 0 )
enabled = true
cast_to = Vector2( 12, 0 )
collide_with_areas = true
collide_with_bodies = false

[node name="Grounded_notifiers" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( 0, 10.9482 )

[node name="RayCast2D" type="RayCast2D" parent="Grounded_notifiers"]
position = Vector2( 6.96462, 0 )
enabled = true
cast_to = Vector2( 0, 4 )
collision_mask = 2
collide_with_areas = true

[node name="RayCast2D2" type="RayCast2D" parent="Grounded_notifiers"]
enabled = true
cast_to = Vector2( 0, 4 )
collision_mask = 2
collide_with_areas = true

[node name="RayCast2D3" type="RayCast2D" parent="Grounded_notifiers"]
position = Vector2( -7.95957, 0 )
enabled = true
cast_to = Vector2( 0, 4 )
collision_mask = 2
collide_with_areas = true
[connection signal="grounded_updated" from="." to="Camera" method="_on_Player_grounded_updated"]
[connection signal="initialize_HP" from="PlayerStats" to="HUD" method="_on_initialize_HP"]
[connection signal="initialize_Stamina" from="PlayerStats" to="HUD" method="_on_initialize_Stamina"]
[connection signal="on_health_change" from="PlayerStats" to="HUD" method="_on_health_change"]
[connection signal="player_died" from="PlayerStats" to="." method="_on_PlayerStats_player_died"]
[connection signal="outside_camera" from="Camera" to="PlayerStats" method="_on_outside_camera"]

[editable path="HUD"]
